--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~13.2.0",
     "bootstrap": "^5.1.3",
     "ng-multiselect-dropdown": "^0.3.8",
+    "ngx-socket-io": "^4.2.0",
     "rxjs": "~7.5.0",
     "svg-country-flags": "^1.2.10",
     "tslib": "^2.3.0",
